<resources>
    <string name="app_name">TPO_Training_and_Placement_Student</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="forgot_text">Forgot</string>
    <string name="password_with_question_mark_text">Password?</string>
    <string name="forgot_password_quote_text">Don\'t worry! It happens. Please enter the address associated with your account. </string>
    <string name="login_text">Login</string>
    <string name="forgot_password_text">Forgot Password?</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="dont_have_an_account_text">Don\'t have an account?</string>
    <string name="student_name_text">Student Name</string>
    <string name="phone_no_text">Phone no.</string>
    <string name="select_branch_text">Select Branch</string>
    <string name="confirm_password_text">Confirm Password</string>
    <string name="student_image_content_description">Student Image</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="submit_button_text">Submit</string>
    <string name="hello_text">Hello</string>
    <string name="company_name_text">Company Name</string>
    <string name="package_text">Package</string>
    <string name="designation_text">Designation</string>
    <string name="training_text">Training</string>
    <string name="placement_text">Placement</string>
    <string name="opportunity_text">Opportunity</string>
    <string name="history_text">History</string>
    <string name="arrow_back_image_in_activity_forgot_password">Arrow Back Image in Forgot Password Activity</string>
    <string name="notice_text">Notice</string>
    <string name="list_of_text">List of</string>
    <string name="company_text">Company</string>
    <string name="view_all_text">View All</string>
    <string name="list_of_company_text">List of Company</string>
    <string name="placement_opportunities_text">Placement Opportunity</string>
    <string name="pre_placement_text">Pre-Placement</string>
    <string name="placement_history_text">Placement History</string>
    <string name="logout_text">Logout</string>
    <string name="branch_text">Branch</string>
    <string name="save_details_button">Save Details</string>
    <string name="type_of_company_text">Type of Company</string>
    <string name="product_or_service_of_company_text">Product/Service of Company</string>
    <string name="about_text">About</string>
    <string name="contact_details_text">Contact Details</string>
    <string name="companies_text">Companies</string>    <string name="artificial_intelligence_machine_learning_text">AI/ML</string>
    <string name="civil_engineering_text">CE</string>
    <string name="chemical_engineering_text">CH</string>
    <string name="computer_technology_text">CM</string>
    <string name="mechanical_engineering_text">ME</string>
    <string name="information_technology_text">IT</string>
    <string name="electrical_engineering_text">EJ</string>
    <string name="number_of_students_placed_hint">No.of Students Placed</string>

    <string name="Role_text">Role</string>
    <string name="location_text">Location</string>
    <string name="summary_text">Summary</string>
    <string name="key_qualification_text">Key Qualification</string>
    <string name="job_description_text">Job Description</string>
    <string name="additional_requirements_text">Additional Requirements</string>
    <string name="link_for_applying_text">Link for Applying</string>
    <string name="about_the_company_or_organization_text">About the Company/Organization</string>
    <string name="content_of_training_text">Content of Training</string>
    <string name="eligibility_criteria_text">Eligibility Criteria</string>
    <string name="training_duration_text">Training Duration</string>
    <string name="training_charges_text">Training Charges</string>
    <string name="registration_date_text">Registration Date</string>
    <string name="last_date_of_registration_text">Last Date of Registration</string>
    <string name="passing_year_text">Passing year</string>
    <string name="position_text">Position</string>
    <string name="change_password_text">Change Password</string>
    <string name="change_text">Change</string>
    <string name="new_password_text">New Password</string>
    <string name="confirm_new_password_text">Confirm New Password</string>
    <string name="notification_text">Notification</string>
    <string name="notice_date_text">Date</string>
    <string name="hint_year">Year</string>
    <string name="sr_no_text">Sr No.</string>
    <string name="hint_company_name">Company name</string>
    <string name="total_text">Total</string>
    <string name="hint_total_lpa">Total LPA</string>
    <string name="hint_average_lpa">Average LPA</string>
    <string name="batch_text">Batch</string>
    <string name="training_and_placement_report_text">Training and Placement History Report</string>
    <string name="details_text">Details</string>
    <string name="link_text">Link</string>
    <string name="colon_text">:</string>
    <string name="notice_file_text">Notice File</string>


</resources>